--- a/Mobile Applications project/MJDetailViewController.xib
+++ b/Mobile Applications project/MJDetailViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MJDetailViewController">
             <connections>
+                <outlet property="loaded" destination="P7Y-9U-q8T" id="QPP-OY-1Ts"/>
                 <outlet property="popDate" destination="w0u-k7-tia" id="hvA-7k-74d"/>
                 <outlet property="taskLabel" destination="leU-gq-jIN" id="TXQ-Uj-5Xw"/>
                 <outlet property="taskTextLabel" destination="shX-rJ-Wwq" id="m0v-et-hL9"/>
@@ -51,6 +52,14 @@
                         <action selector="addtaskbuttonPressed:" destination="-1" eventType="touchUpInside" id="77Q-WR-lzA"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dhU-8B-igQ">
+                    <rect key="frame" x="223" y="165" width="37" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Done"/>
+                    <connections>
+                        <action selector="donebuttonPressed:" destination="-1" eventType="touchUpInside" id="3kE-ao-bAj"/>
+                    </connections>
+                </button>
                 <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="shX-rJ-Wwq">
                     <rect key="frame" x="42" y="223" width="297" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -66,14 +75,13 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dhU-8B-igQ">
-                    <rect key="frame" x="223" y="165" width="37" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P7Y-9U-q8T">
+                    <rect key="frame" x="211" y="125" width="108" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Done"/>
-                    <connections>
-                        <action selector="donebuttonPressed:" destination="-1" eventType="touchUpInside" id="3kE-ao-bAj"/>
-                    </connections>
-                </button>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <point key="canvasLocation" x="93.5" y="-19.5"/>
