modules page started

--- a/Mobile Applications project/Base.lproj/LaunchScreen.storyboard
+++ b/Mobile Applications project/Base.lproj/LaunchScreen.storyboard
@@ -32,11 +32,11 @@
                                     <constraint firstAttribute="width" constant="61" id="Tsa-qT-bb2"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <color key="textColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.12573118050000001" green="0.33195057779999998" blue="0.57589863990000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="uLM-Es-lCb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="166" id="1Vv-SB-ybD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qR6-Mx-3Fb" secondAttribute="trailing" constant="68" id="1jk-HZ-LoF"/>
